# loupe

./: README.md  loupe.py  pyproject.toml
examples/: npm_packages.html  npm_packages.json  saas_metrics.csv  saas_metrics.html
