[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loupe-cli"
version = "0.1.0"
description = "CSV & JSON → beautiful self-contained interactive HTML dashboards. Zero dependencies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Seven Du", email = "jydu_seven@outlook.com"}]
dependencies = []
keywords = ["csv", "json", "dashboard", "html", "data-visualization", "cli", "explorer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Jah-yee/loupe"
Repository = "https://github.com/Jah-yee/loupe"
Issues = "https://github.com/Jah-yee/loupe/issues"

[project.scripts]
loupe = "loupe:main"
